Add button to set number of squares

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
   <script src="./script.js" defer></script>
 </head>
 <body>
-  <form>
-    <label for="numbSquares">Input # of Squares: </label>
-    <input type="text" id="numbSquares"><br>
-    <button class="submit">Submit</button>
-  </form>
+  <div class="submit-container">
+    <button class="submit"># of Squares</button>
+  </div>
   <div class="main">
     <div class="container">
     </div>
